--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -3,6 +3,7 @@ pull_request_rules:
     conditions:
       - author=imgbot[bot]
       - check-success=Summary
+      - check-success=deploy
     actions:
       merge:
         method: merge
@@ -11,6 +12,7 @@ pull_request_rules:
     conditions:
       - author=renovate[bot]
       - check-success=Summary
+      - check-success=deploy
     actions:
       merge:
         method: merge
@@ -20,6 +22,7 @@ pull_request_rules:
       - title~=^\[requires.io\]
       - head~=^requires-io
       - check-success=Summary
+      - check-success=deploy
     actions:
       merge:
         method: merge
