--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches: [master]
   # 手动触发部署
-  workflow_dispatch:
+  # workflow_dispatch:
   # pr 部署
   pull_request:
+    branches:
+      - master
 
 jobs:
   deploy:
