chore: docs change to src
https://github.com/github/linguist/discussions/5946

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -39,5 +39,5 @@ jobs:
         with:
           # This is the branch where the docs are deployed to
           branch: gh-pages
-          folder: docs/.vuepress/dist
+          folder: src/.vuepress/dist
 
