--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 *.bak
 
 node_modules/
-docs/.vuepress/.cache/
-docs/.vuepress/.temp/
-docs/.vuepress/dist/
+src/.vuepress/.cache/
+src/.vuepress/.temp/
+src/.vuepress/dist/
