--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "nothing",
   "license": "MIT",
   "scripts": {
-    "joying:build": "vuepress build docs",
-    "joying:clean-dev": "vuepress dev docs --clean-cache",
-    "joying:dev": "vuepress dev docs"
+    "joying:build": "vuepress build src",
+    "joying:clean-dev": "vuepress dev src --clean-cache",
+    "joying:dev": "vuepress dev src"
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.48",
