--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.48",
     "vue": "3.2.37",
-    "vuepress": "2.0.0-beta.48",
-    "vuepress-theme-hope": "2.0.0-beta.84"
+    "vuepress": "^2.0.0-beta.48",
+    "vuepress-theme-hope": "^2.0.0-beta.84"
   }
 }
