--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       # 运行构建脚本
-      - name: Build VuePress site
+      - name: Build VitePress site
         env:
           BASE: /RandomThought/
           HOSTNAME: https://draugus.github.io/RandomThought/
@@ -48,8 +48,8 @@ jobs:
         with:
           # 部署到 gh-pages 分支
           target_branch: gh-pages
-          # 部署目录为 VuePress 的默认输出目录
-          build_dir: src/.vuepress/dist
+          # 部署目录为 VitePress 的默认输出目录
+          build_dir: src/.vitepress/dist
         env:
           # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
