--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,8 @@ jobs:
       # 运行构建脚本
       - name: Build VitePress site
         env:
-          BASE: /RandomThought/
-          HOSTNAME: https://draugus.github.io/RandomThought/
+          BASE: /joying-life/
+          HOSTNAME: https://augusmeow.github.io/joying-life/
           NODE_OPTIONS: --max_old_space_size=4096
         run: yarn joying:build
 
