--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,16 @@ jobs:
         with:
           # 选择要使用的 node 版本
           node-version: 16
-          cache: yarn
+          # cache: yarn
 
-      # 如果缓存没有命中，安装依赖
+      - uses: pnpm/action-setup@v2.2.4
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: pnpm install
 
       # 运行构建脚本
       - name: Build VitePress site
@@ -39,7 +44,7 @@ jobs:
           BASE: /joying-life/
           HOSTNAME: https://augusmeow.github.io/joying-life/
           NODE_OPTIONS: --max_old_space_size=4096
-        run: yarn joying:build
+        run: pnpm build
 
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
@@ -49,7 +54,7 @@ jobs:
           # 部署到 gh-pages 分支
           target_branch: gh-pages
           # 部署目录为 VitePress 的默认输出目录
-          build_dir: src/.vitepress/dist
+          build_dir: ./.vitepress/dist
         env:
           # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
